task3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: webapp.com
    http:
      paths:
      - backend:
          service:
            name: webapp-service
            port:
              number: 80
        path: /
        pathType: Prefix
